--- a/Module_13_Python_date_time_file_handling/Module_13_excercise.ipynb
+++ b/Module_13_Python_date_time_file_handling/Module_13_excercise.ipynb
@@ -309,6 +309,415 @@
     "    print(f\"Number of lines: {lines}\")\n",
     "    print(f\"Number of words: {words}\\n\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Read the countries_data.json data file in data directory, create a function that finds the ten most spoken languages\n",
+    "```python\n",
+    "# Your output should look like this\n",
+    "print(most_spoken_languages(filename='./data/countries_data.json', 10))\n",
+    "[(91, 'English'),\n",
+    "(45, 'French'),\n",
+    "(25, 'Arabic'),\n",
+    "(24, 'Spanish'),\n",
+    "(9, 'Russian'),\n",
+    "(9, 'Portuguese'),\n",
+    "(8, 'Dutch'),\n",
+    "(7, 'German'),\n",
+    "(5, 'Chinese'),\n",
+    "(4, 'Swahili'),\n",
+    "(4, 'Serbian')]\n",
+    "\n",
+    "# Your output should look like this\n",
+    "print(most_spoken_languages(filename='./data/countries_data.json', 3))\n",
+    "[(91, 'English'),\n",
+    "(45, 'French'),\n",
+    "(25, 'Arabic')]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(91, 'English'), (45, 'French'), (25, 'Arabic'), (24, 'Spanish'), (9, 'Portuguese'), (9, 'Russian'), (8, 'Dutch'), (7, 'German'), (5, 'Chinese'), (4, 'Serbian')]\n",
+      "[(91, 'English'), (45, 'French'), (25, 'Arabic')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "from collections import Counter\n",
+    "\n",
+    "def most_spoken_languages(filename, top_n):\n",
+    "    with open(filename, 'r') as file:\n",
+    "        countries_data = json.load(file)\n",
+    "    languages = []\n",
+    "\n",
+    "    for country in countries_data:\n",
+    "        languages.extend(country.get('languages', []))\n",
+    "\n",
+    "    language_count = Counter(languages)\n",
+    "\n",
+    "    most_common_languages = language_count.most_common(top_n)\n",
+    "\n",
+    "    return [(count, language) for language, count in most_common_languages]\n",
+    "\n",
+    "print(most_spoken_languages(filename='./data/countries_data.json', top_n=10))\n",
+    "print(most_spoken_languages(filename='./data/countries_data.json', top_n=3))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Read the countries_data.json data file in data directory, create a function that creates a list of the ten most populated countries\n",
+    "\n",
+    "```python\n",
+    "# Your output should look like this\n",
+    "print(most_populated_countries(filename='./data/countries_data.json', 10))\n",
+    "\n",
+    "[\n",
+    "{'country': 'China', 'population': 1377422166},\n",
+    "{'country': 'India', 'population': 1295210000},\n",
+    "{'country': 'United States of America', 'population': 323947000},\n",
+    "{'country': 'Indonesia', 'population': 258705000},\n",
+    "{'country': 'Brazil', 'population': 206135893},\n",
+    "{'country': 'Pakistan', 'population': 194125062},\n",
+    "{'country': 'Nigeria', 'population': 186988000},\n",
+    "{'country': 'Bangladesh', 'population': 161006790},\n",
+    "{'country': 'Russian Federation', 'population': 146599183},\n",
+    "{'country': 'Japan', 'population': 126960000}\n",
+    "]\n",
+    "\n",
+    "# Your output should look like this\n",
+    "\n",
+    "print(most_populated_countries(filename='./data/countries_data.json', 3))\n",
+    "[\n",
+    "{'country': 'China', 'population': 1377422166},\n",
+    "{'country': 'India', 'population': 1295210000},\n",
+    "{'country': 'United States of America', 'population': 323947000}\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'country': 'China', 'population': 1377422166}, {'country': 'India', 'population': 1295210000}, {'country': 'United States of America', 'population': 323947000}, {'country': 'Indonesia', 'population': 258705000}, {'country': 'Brazil', 'population': 206135893}, {'country': 'Pakistan', 'population': 194125062}, {'country': 'Nigeria', 'population': 186988000}, {'country': 'Bangladesh', 'population': 161006790}, {'country': 'Russian Federation', 'population': 146599183}, {'country': 'Japan', 'population': 126960000}]\n",
+      "[{'country': 'China', 'population': 1377422166}, {'country': 'India', 'population': 1295210000}, {'country': 'United States of America', 'population': 323947000}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "def most_populated_countries(filename, n):\n",
+    "    # Read the JSON file\n",
+    "    with open(filename, 'r') as file:\n",
+    "        countries_data = json.load(file)\n",
+    "    \n",
+    "    # Sort countries by population in descending order\n",
+    "    sorted_countries = sorted(\n",
+    "        countries_data, key=lambda country: country['population'], reverse=True\n",
+    "    )\n",
+    "    \n",
+    "    # Get the top n populated countries\n",
+    "    top_countries = sorted_countries[:n]\n",
+    "    \n",
+    "    # Create the desired output format\n",
+    "    result = [{'country': country['name'], 'population': country['population']} for country in top_countries]\n",
+    "    \n",
+    "    return result\n",
+    "\n",
+    "# Example usage:\n",
+    "print(most_populated_countries(filename='./data/countries_data.json', n=10))\n",
+    "print(most_populated_countries(filename='./data/countries_data.json', n=3))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises: Level 2\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Extract all incoming email addresses as a list from the email_exchange_big.txt file.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/data/email_exchange_big.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[65], line 17\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m unique_emails\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# Example usage\u001b[39;00m\n\u001b[1;32m---> 17\u001b[0m emails \u001b[38;5;241m=\u001b[39m extract_emails(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/data/email_exchange_big.txt\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mExtracted email addresses:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m email \u001b[38;5;129;01min\u001b[39;00m emails:\n",
+      "Cell \u001b[1;32mIn[65], line 8\u001b[0m, in \u001b[0;36mextract_emails\u001b[1;34m(filename)\u001b[0m\n\u001b[0;32m      5\u001b[0m email_pattern \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m[\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m.-]+@[\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m.-]+\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mw+\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Read file and extract emails\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(filename, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m, encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m      9\u001b[0m     content \u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m     10\u001b[0m     emails \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39mfindall(email_pattern, content)\n",
+      "File \u001b[1;32mc:\\Users\\Dell\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    322\u001b[0m     )\n\u001b[1;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/data/email_exchange_big.txt'"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def extract_emails(filename):\n",
+    "    # Regex pattern for email addresses\n",
+    "    email_pattern = r'[\\w\\.-]+@[\\w\\.-]+\\.\\w+'\n",
+    "    \n",
+    "    # Read file and extract emails\n",
+    "    with open(filename, 'r', encoding='utf-8') as file:\n",
+    "        content = file.read()\n",
+    "        emails = re.findall(email_pattern, content)\n",
+    "    \n",
+    "    # Remove duplicates while maintaining order\n",
+    "    unique_emails = list(dict.fromkeys(emails))\n",
+    "    return unique_emails\n",
+    "\n",
+    "# Example usage\n",
+    "emails = extract_emails(filename='./data/email_exchange_big.txt')\n",
+    "print(\"\\nExtracted email addresses:\")\n",
+    "for email in emails:\n",
+    "    print(email)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Find the most common words in the English language. Call the name of your function find_most_common_words, it will take two parameters - a string or a file and a positive integer, indicating the number of words. Your function will return an array of tuples in descending order. Check the output\n",
+    "```python\n",
+    "    # Your output should look like this\n",
+    "    print(find_most_common_words('sample.txt', 10))\n",
+    "    [(10, 'the'),\n",
+    "    (8, 'be'),\n",
+    "    (6, 'to'),\n",
+    "    (6, 'of'),\n",
+    "    (5, 'and'),\n",
+    "    (4, 'a'),\n",
+    "    (4, 'in'),\n",
+    "    (3, 'that'),\n",
+    "    (2, 'have'),\n",
+    "    (2, 'I')]\n",
+    "\n",
+    "    # Your output should look like this\n",
+    "    print(find_most_common_words('sample.txt', 5))\n",
+    "\n",
+    "    [(10, 'the'),\n",
+    "    (8, 'be'),\n",
+    "    (6, 'to'),\n",
+    "    (6, 'of'),\n",
+    "    (5, 'and')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(21, 'the'), (15, 'to'), (15, 'of'), (12, 'and'), (7, 'that')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "from collections import Counter\n",
+    "\n",
+    "def find_most_common_words(source, n):\n",
+    "    if isinstance(source, str):\n",
+    "        try:\n",
+    "            with open(source, 'r') as file:\n",
+    "                text = file.read()\n",
+    "        except FileNotFoundError:\n",
+    "            text = source  # If file not found, treat source as a string\n",
+    "    else:\n",
+    "        raise ValueError(\"Source must be a filename (string) or text content.\")\n",
+    "\n",
+    "    # Normalize text by removing punctuation and converting to lowercase\n",
+    "    words = re.findall(r'\\b\\w+\\b', text.lower())\n",
+    "    \n",
+    "    # Count word frequencies\n",
+    "    word_count = Counter(words)\n",
+    "    \n",
+    "    # Get the n most common words\n",
+    "    most_common = word_count.most_common(n)\n",
+    "    \n",
+    "    return [(count, word) for word, count in most_common]\n",
+    "\n",
+    "print(find_most_common_words('sample.txt', 5)) # sample.txt is existing file available in the data folder\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "source": [
+    "### 6. Use the function, find_most_frequent_words to find: a) The ten most frequent words used in Obama's speech b) The ten most frequent words used in Michelle's speech c) The ten most frequent words used in Trump's speech d) The ten most frequent words used in Melina's speech"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The ten most frequent words used in Obama's speech: [(129, 'the'), (113, 'and'), (81, 'of'), (70, 'to'), (67, 'our'), (62, 'we'), (50, 'that'), (48, 'a'), (36, 'is'), (25, 'in')]\n",
+      "The ten most frequent words used in Michelle's speech: [(96, 'and'), (85, 'the'), (84, 'to'), (50, 'that'), (46, 'of'), (41, 'a'), (37, 'he'), (36, 'in'), (28, 'my'), (28, 'i')]\n",
+      "The ten most frequent words used in Melina's speech: [(77, 'and'), (55, 'to'), (52, 'the'), (29, 'is'), (28, 'i'), (27, 'for'), (25, 'of'), (24, 'that'), (22, 'a'), (21, 'you')]\n",
+      "The ten most frequent words used in Trump's speech: [(65, 'the'), (59, 'and'), (44, 'we'), (40, 'will'), (38, 'of'), (32, 'to'), (30, 'our'), (20, 'is'), (17, 'america'), (13, 'for')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "from collections import Counter\n",
+    "\n",
+    "def find_most_common_words(source, n):\n",
+    "    if isinstance(source, str):\n",
+    "        try:\n",
+    "            with open(source, 'r') as file:\n",
+    "                text = file.read()\n",
+    "        except FileNotFoundError:\n",
+    "            text = source  # If file not found, treat source as a string\n",
+    "    else:\n",
+    "        raise ValueError(\"Source must be a filename (string) or text content.\")\n",
+    "\n",
+    "    # Normalize text by removing punctuation and converting to lowercase\n",
+    "    words = re.findall(r'\\b\\w+\\b', text.lower())\n",
+    "    \n",
+    "    # Count word frequencies\n",
+    "    word_count = Counter(words)\n",
+    "    \n",
+    "    # Get the n most common words\n",
+    "    most_common = word_count.most_common(n)\n",
+    "    \n",
+    "    return [(count, word) for word, count in most_common]\n",
+    "\n",
+    "print(f\"The ten most frequent words used in Obama's speech: {find_most_common_words('data/obama_speech.txt', 10)}\")\n",
+    "print(f\"The ten most frequent words used in Michelle's speech: {find_most_common_words('data/michelle_obama_speech.txt', 10)}\")\n",
+    "print(f\"The ten most frequent words used in Melina's speech: {find_most_common_words('data/melina_trump_speech.txt', 10)}\")\n",
+    "print(f\"The ten most frequent words used in Trump's speech: {find_most_common_words('data/donald_speech.txt', 10)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. Write a python application that checks similarity between two texts. It takes a file or a string as a parameter and it will evaluate the similarity of the two texts. For instance check the similarity between the transcripts of Michelle's and Melina's speech. You may need a couple of functions, function to clean the text(clean_text), function to remove support words(remove_support_words) and finally to check the similarity(check_text_similarity). List of stop words are in the data directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "import re\n",
+    "import math\n",
+    "from data import stop_words\n",
+    "\n",
+    "def clean_text(text):\n",
+    "    # Convert to lowercase and remove special characters\n",
+    "    text = text.lower()\n",
+    "    text = re.sub(r'[^a-zA-Z\\s]', '', text)\n",
+    "    return text\n",
+    "\n",
+    "def remove_stop_words(text, stop_words_file='data/stop_words.txt'):\n",
+    "    \"\"\"Remove stop words from the text using a stop words file.\"\"\"\n",
+    "    with open(stop_words_file, 'r') as file:\n",
+    "        stop_words = set(file.read().split())  \n",
+    "    words = text.split()\n",
+    "    filtered_words = [word for word in words if word not in stop_words]\n",
+    "    return ' '.join(filtered_words)\n",
+    "\n",
+    "def get_word_frequencies(text):\n",
+    "    words = text.split()\n",
+    "    return Counter(words)\n",
+    "\n",
+    "def calculate_cosine_similarity(freq1, freq2):\n",
+    "    # Get all unique words\n",
+    "    words = set(freq1.keys()) | set(freq2.keys())\n",
+    "    \n",
+    "    # Calculate dot product and magnitudes\n",
+    "    dot_product = sum(freq1.get(word, 0) * freq2.get(word, 0) for word in words)\n",
+    "    magnitude1 = math.sqrt(sum(freq1.get(word, 0) ** 2 for word in words))\n",
+    "    magnitude2 = math.sqrt(sum(freq2.get(word, 0) ** 2 for word in words))\n",
+    "    \n",
+    "    # Avoid division by zero\n",
+    "    if magnitude1 == 0 or magnitude2 == 0:\n",
+    "        return 0\n",
+    "        \n",
+    "    return dot_product / (magnitude1 * magnitude2)\n",
+    "\n",
+    "def check_text_similarity(text1, text2):\n",
+    "    # Handle file inputs\n",
+    "    if text1.endswith('.txt'):\n",
+    "        with open(text1, 'r', encoding='utf-8') as file:\n",
+    "            text1 = file.read()\n",
+    "    if text2.endswith('.txt'):\n",
+    "        with open(text2, 'r', encoding='utf-8') as file:\n",
+    "            text2 = file.read()\n",
+    "            \n",
+    "    # Process texts\n",
+    "    text1 = clean_text(text1)\n",
+    "    text2 = clean_text(text2)\n",
+    "    \n",
+    "    text1 = remove_stop_words(text1)\n",
+    "    text2 = remove_stop_words(text2)\n",
+    "    \n",
+    "    # Get word frequencies\n",
+    "    freq1 = get_word_frequencies(text1)\n",
+    "    freq2 = get_word_frequencies(text2)\n",
+    "    \n",
+    "    # Calculate similarity\n",
+    "    similarity = calculate_cosine_similarity(freq1, freq2)\n",
+    "    \n",
+    "    return similarity\n",
+    "\n",
+    "# Example usage\n",
+    "similarity = check_text_similarity('michelle_speech.txt', 'melina_speech.txt')\n",
+    "print(f\"Similarity score: {similarity:.2f}\")"
+   ]
   }
  ],
  "metadata": {
