--- a/Module_13_Python_date_time_file_handling/Module_13_excercise.ipynb
+++ b/Module_13_Python_date_time_file_handling/Module_13_excercise.ipynb
@@ -647,76 +647,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "argument of type 'module' is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[93], line 38\u001b[0m\n\u001b[0;32m     35\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m jaccard_similarity(text1, text2)\n\u001b[0;32m     37\u001b[0m \u001b[38;5;66;03m# Example usage:\u001b[39;00m\n\u001b[1;32m---> 38\u001b[0m similarity \u001b[38;5;241m=\u001b[39m process_text(file1\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/melina_trump_speech.txt\u001b[39m\u001b[38;5;124m'\u001b[39m, file2\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/michelle_obama_speech.txt\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mJaccard similarity score between the two speeches: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msimilarity\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[93], line 31\u001b[0m, in \u001b[0;36mprocess_text\u001b[1;34m(file1, file2)\u001b[0m\n\u001b[0;32m     28\u001b[0m     text2 \u001b[38;5;241m=\u001b[39m f\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m     30\u001b[0m \u001b[38;5;66;03m# Clean the text and remove stop words, returning word lists\u001b[39;00m\n\u001b[1;32m---> 31\u001b[0m text1 \u001b[38;5;241m=\u001b[39m remove_support_words(clean_text(text1))\n\u001b[0;32m     32\u001b[0m text2 \u001b[38;5;241m=\u001b[39m remove_support_words(clean_text(text2))\n\u001b[0;32m     34\u001b[0m \u001b[38;5;66;03m# Calculate Jaccard similarity using word lists\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[93], line 13\u001b[0m, in \u001b[0;36mremove_support_words\u001b[1;34m(text)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Remove stop words from the text using the imported stop_words list.\"\"\"\u001b[39;00m\n\u001b[0;32m     12\u001b[0m words \u001b[38;5;241m=\u001b[39m text\u001b[38;5;241m.\u001b[39msplit()\n\u001b[1;32m---> 13\u001b[0m filtered_words \u001b[38;5;241m=\u001b[39m [word \u001b[38;5;28;01mfor\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m words \u001b[38;5;28;01mif\u001b[39;00m word \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m stop_words]\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m filtered_words\n",
+      "\u001b[1;31mTypeError\u001b[0m: argument of type 'module' is not iterable"
+     ]
+    }
+   ],
    "source": [
-    "from collections import Counter\n",
-    "import re\n",
-    "import math\n",
-    "from data import stop_words\n",
+    "import string\n",
+    "from Data import stop_words  # Import stop words from the stop_words.py file\n",
     "\n",
     "def clean_text(text):\n",
-    "    # Convert to lowercase and remove special characters\n",
-    "    text = text.lower()\n",
-    "    text = re.sub(r'[^a-zA-Z\\s]', '', text)\n",
+    "    \"\"\"Clean the input text by removing punctuation and converting to lowercase.\"\"\"\n",
+    "    text = text.lower()  # Convert to lowercase\n",
+    "    text = text.translate(str.maketrans('', '', string.punctuation))  # Remove punctuation\n",
     "    return text\n",
     "\n",
-    "def remove_stop_words(text, stop_words_file='data/stop_words.txt'):\n",
-    "    \"\"\"Remove stop words from the text using a stop words file.\"\"\"\n",
-    "    with open(stop_words_file, 'r') as file:\n",
-    "        stop_words = set(file.read().split())  \n",
+    "def remove_support_words(text):\n",
+    "    \"\"\"Remove stop words from the text using the imported stop_words list.\"\"\"\n",
     "    words = text.split()\n",
     "    filtered_words = [word for word in words if word not in stop_words]\n",
-    "    return ' '.join(filtered_words)\n",
+    "    return filtered_words\n",
     "\n",
-    "def get_word_frequencies(text):\n",
-    "    words = text.split()\n",
-    "    return Counter(words)\n",
+    "def jaccard_similarity(list1, list2):\n",
+    "    \"\"\"Calculate the Jaccard similarity between two lists.\"\"\"\n",
+    "    intersection = len(set(list1) & set(list2))\n",
+    "    union = len(set(list1) | set(list2))\n",
+    "    return intersection / union if union != 0 else 0\n",
     "\n",
-    "def calculate_cosine_similarity(freq1, freq2):\n",
-    "    # Get all unique words\n",
-    "    words = set(freq1.keys()) | set(freq2.keys())\n",
+    "def process_text(file1, file2):\n",
+    "    \"\"\"Process the input text files, clean them, and remove stop words.\"\"\"\n",
+    "    # Read the text files\n",
+    "    with open(file1, 'r') as f:\n",
+    "        text1 = f.read()\n",
+    "    with open(file2, 'r') as f:\n",
+    "        text2 = f.read()\n",
+    "\n",
+    "    # Clean the text and remove stop words, returning word lists\n",
+    "    text1 = remove_support_words(clean_text(text1))\n",
+    "    text2 = remove_support_words(clean_text(text2))\n",
+    "\n",
+    "    # Calculate Jaccard similarity using word lists\n",
+    "    return jaccard_similarity(text1, text2)\n",
+    "\n",
+    "# Example usage:\n",
+    "similarity = process_text(file1='data/melina_trump_speech.txt', file2='data/michelle_obama_speech.txt')\n",
+    "print(f\"Jaccard similarity score between the two speeches: {similarity:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8. Find the 10 most repeated words in the romeo_and_juliet.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The ten most repeated word in romeo_and_juliet.txt: [(868, 'the'), (800, 'and'), (661, 'to'), (658, 'i'), (535, 'of'), (530, 'a'), (381, 'is'), (378, 'in'), (371, 'that'), (367, 'you')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "from collections import Counter\n",
+    "\n",
+    "def find_most_common_words(source, n):\n",
+    "    if isinstance(source, str):\n",
+    "        try:\n",
+    "            with open(source, 'r') as file:\n",
+    "                text = file.read()\n",
+    "        except FileNotFoundError:\n",
+    "            text = source  # If file not found, treat source as a string\n",
+    "    else:\n",
+    "        raise ValueError(\"Source must be a filename (string) or text content.\")\n",
+    "\n",
+    "    # Normalize text by removing punctuation and converting to lowercase\n",
+    "    words = re.findall(r'\\b\\w+\\b', text.lower())\n",
     "    \n",
-    "    # Calculate dot product and magnitudes\n",
-    "    dot_product = sum(freq1.get(word, 0) * freq2.get(word, 0) for word in words)\n",
-    "    magnitude1 = math.sqrt(sum(freq1.get(word, 0) ** 2 for word in words))\n",
-    "    magnitude2 = math.sqrt(sum(freq2.get(word, 0) ** 2 for word in words))\n",
+    "    # Count word frequencies\n",
+    "    word_count = Counter(words)\n",
     "    \n",
-    "    # Avoid division by zero\n",
-    "    if magnitude1 == 0 or magnitude2 == 0:\n",
-    "        return 0\n",
+    "    # Get the n most common words\n",
+    "    most_common = word_count.most_common(n)\n",
+    "    \n",
+    "    return [(count, word) for word, count in most_common]\n",
+    "\n",
+    "print(f\"The ten most repeated word in romeo_and_juliet.txt: {find_most_common_words('data/romeo_and_juliet.txt', 10)}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9. Read the hacker news csv file and find out: a) Count the number of lines containing python or Python b) Count the number lines containing JavaScript, javascript or Javascript c) Count the number lines containing Java and not JavaScript"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Count of lines containing 'python' or 'Python': 0\n",
+      "Count of lines containing 'JavaScript', 'javascript', or 'Javascript': 0\n",
+      "Count of lines containing 'Java' but not 'JavaScript': 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "def count_keywords_in_csv(file_path):\n",
+    "    # Initialize counters\n",
+    "    count_python = 0\n",
+    "    count_javascript = 0\n",
+    "    count_java_not_javascript = 0\n",
+    "\n",
+    "    # Open the CSV file\n",
+    "    with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "        reader = csv.reader(file)\n",
     "        \n",
-    "    return dot_product / (magnitude1 * magnitude2)\n",
+    "        # Assuming the title/content is in the first column (index 0)\n",
+    "        for row in reader:\n",
+    "            if len(row) > 0:  # Check if the row has content\n",
+    "                text = row[0].lower()  # Assuming the content to check is in the first column\n",
+    "                # Check for Python-related occurrences\n",
+    "                if 'python' in text:\n",
+    "                    count_python += 1\n",
+    "                # Check for JavaScript-related occurrences\n",
+    "                if 'javascript' in text:\n",
+    "                    count_javascript += 1\n",
+    "                # Check for Java but not JavaScript\n",
+    "                if 'java' in text and 'javascript' not in text:\n",
+    "                    count_java_not_javascript += 1\n",
     "\n",
-    "def check_text_similarity(text1, text2):\n",
-    "    # Handle file inputs\n",
-    "    if text1.endswith('.txt'):\n",
-    "        with open(text1, 'r', encoding='utf-8') as file:\n",
-    "            text1 = file.read()\n",
-    "    if text2.endswith('.txt'):\n",
-    "        with open(text2, 'r', encoding='utf-8') as file:\n",
-    "            text2 = file.read()\n",
-    "            \n",
-    "    # Process texts\n",
-    "    text1 = clean_text(text1)\n",
-    "    text2 = clean_text(text2)\n",
-    "    \n",
-    "    text1 = remove_stop_words(text1)\n",
-    "    text2 = remove_stop_words(text2)\n",
-    "    \n",
-    "    # Get word frequencies\n",
-    "    freq1 = get_word_frequencies(text1)\n",
-    "    freq2 = get_word_frequencies(text2)\n",
-    "    \n",
-    "    # Calculate similarity\n",
-    "    similarity = calculate_cosine_similarity(freq1, freq2)\n",
-    "    \n",
-    "    return similarity\n",
+    "    return count_python, count_javascript, count_java_not_javascript\n",
     "\n",
-    "# Example usage\n",
-    "similarity = check_text_similarity('michelle_speech.txt', 'melina_speech.txt')\n",
-    "print(f\"Similarity score: {similarity:.2f}\")"
+    "# Example usage:\n",
+    "file_path = 'data/hacker_news.csv'  # Ensure this is the correct file path\n",
+    "python_count, javascript_count, java_not_js_count = count_keywords_in_csv(file_path)\n",
+    "\n",
+    "print(f\"Count of lines containing 'python' or 'Python': {python_count}\")\n",
+    "print(f\"Count of lines containing 'JavaScript', 'javascript', or 'Javascript': {javascript_count}\")\n",
+    "print(f\"Count of lines containing 'Java' but not 'JavaScript': {java_not_js_count}\")\n"
    ]
   }
  ],
